# research-system-project

./: .gitignore  README.md
android-app-robot/: build.gradle
android-app-robot/app/: build.gradle
android-app-robot/app/src/main/: AndroidManifest.xml
android-app-robot/app/src/main/res/drawable/: motor_value_border.xml
android-app-robot/app/src/main/res/layout/: activity_main_page.xml  activity_mqtt_connect.xml  activity_mqtt_dashboard.xml
android-app-robot/app/src/main/res/values/: styles.xml
android-app-robot/gradle/wrapper/: gradle-wrapper.properties
android-app-robot/temp/: create_class_mapping.py  migrate_to_androidx.py
app/: main.py  pyproject.toml
app/api/: __init__.py  endpoints.py  websocket.py
app/services/: file_service.py  llm_service.py  mqtt_service.py  pose_service.py  stt_service.py
backend/: llm_handler.py  main.py  mqtt_client.py  pose_analyzer.py  pyproject.toml  text_extractor.py
frontend/: index.html  kebbi_motions.html  stt_test.html  style.css
frontend/css/: style.css
frontend/js/: api.js  main.js  script.js
frontend/js/components/: api_tester.js  coach.js  home.js  navbar.js  settings.js
specs/001-/: data-model.md  data-model.md.bak  plan.md  plan.md.bak  quickstart.md  research.md  research.md.bak  spec.md  spec.md.bak  tasks.md  tasks.md.bak
specs/001-/contracts/: api.yaml
specs/002-andriod-app-robot/: data-model.md  data-model.md.bak  plan.md  plan.md.bak  research.md  research.md.bak  spec.md  spec.md.bak  tasks.md  tasks.md.bak
tmp/: test_llm_standalone.py
(+17 files in other folders)
